# heroku-buildpack-python

./: .deprecated.manifest.yml  .editorconfig  .gitallowed  .gitignore  .gitmodules  .pre-commit-config.yaml  .rspec  .rubocop.yml  .shellcheckrc  .travis.yml  CF_README.md  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  Changelog.md  Dockerfile  Dockerfile.heroku-18  Gemfile  ISSUE_TEMPLATE  LICENSE  Makefile  NOTICE  PULL_REQUEST_TEMPLATE  Pipfile  Procfile  README.md  Rakefile  Readme.md  buildpack.toml  cf.Gemfile  hatchet.json  manifest-including-unsupported.yml  manifest.yml  requirements.txt  telegram  tests.sh
.circleci/: config.yml
.git2gus/: config.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: build_python_runtime.yml  check_changelog.yml  ci.yml  default-ci-workflow.yml  hatchet_app_cleaner.yml  main.yml  prepare-release.yml  release.yml  shellcheck.yml
.sclng/: metadata.toml
builds/: Dockerfile  Dockerfile.heroku-16  Dockerfile.heroku-18  README.md  build_python_runtime.sh  cedar-14.Dockerfile  cedar-14.Dockerfile~HEAD  cedar-14.Dockerfile~move Dockerfiles to central location, add all stacks, update README  dockerenv.default  heroku-16.Dockerfile  heroku-18.Dockerfile  heroku-18.Dockerfile~move Dockerfiles to central location, add all stacks, update README  heroku-20.Dockerfile  heroku-22.Dockerfile  python-3.13-ubuntu-22.04-libexpat-workaround.patch  requirements.txt  test_python_runtime.sh
builds/checksums/: cedar-14.txt  cedar.txt
builds/libraries/: autoconf  gdal  libffi  sqlite
builds/runtimes/: build_python  download_python  pypy  pypy-1.7  pypy-1.8  pypy-1.9  pypy-2.0  pypy-2.0.1  pypy-2.0.2  pypy-2.1  pypy-2.2  pypy-2.2.1  pypy-2.3  pypy-2.3.1  pypy-2.4.0  pypy-2.5.0  pypy-2.5.1  pypy-2.6.0  pypy-2.6.1  pypy-4.0.0  pypy-4.0.1  pypy-5.0.0  pypy-5.0.1  pypy-5.1.0  pypy-5.1.1  pypy-5.10  pypy-5.3.0  pypy-5.3.1  pypy-5.6.0  pypy-5.7.0  pypy-5.7.1  pypy-5.8.0  pypy-5.9.0  pypy2.7  pypy2.7-7.2.0  pypy3  pypy3-2.1  pypy3-2.2  pypy3-2.2.1  pypy3-2.3  (+115 more)
cf_shunit/: test_cf_common  test_package
cf_spec/: spec_helper.rb
cf_spec/features/: dependencies_spec.rb
cf_spec/integration/: deploy_a_python_app_spec.rb  deploy_python_app_no_procfile_spec.rb  warn_on_mercurial_spec.rb
cf_spec/support/: python_environment.rb
cf_spec/unit/: compile_spec.rb
config/: mime.types  nginx.conf.erb
etc/: ci-setup.sh  publish.sh
lib/: build_data.sh  buildpack_packager.rb  cache.sh  checks.sh  hooks.sh  kvstore.sh  metadata.sh  output.sh  package_manager.sh  pip.sh  pipenv.sh  poetry.sh  python.sh  python_version.sh  utils.sh  uv.sh
lib/cloud_foundry/: buildpack_packager.rb
lib/tasks/: package.rake
opt/: dbs.py.src  inject_dbs  inject_dbs.py  settings.py
requirements/: pip.txt  pipenv.txt  poetry.txt  setuptools.txt  uv.txt  wheel.txt
scripts/: build_nginx.sh
spec/: spec_helper.rb
spec/fixtures/poetry_basic/: pyproject.toml
spec/fixtures/poetry_editable/: pyproject.toml
spec/fixtures/poetry_editable/poetry_editable/: __init__.py
spec/fixtures/poetry_mismatched_python_version/: .python-version  pyproject.toml
spec/fixtures/poetry_oldest_python/: pyproject.toml
spec/fixtures/poetry_oldest_python/brotli/: .gitkeep
spec/fixtures/uv_editable/: pyproject.toml
spec/fixtures/uv_editable/src/uv_editable/: __init__.py
spec/fixtures/uv_mismatched_python_version/: pyproject.toml
spec/fixtures/uv_runtime_txt/: .python-version  pyproject.toml
spec/hatchet/: checks_spec.rb  ci_spec.rb  detect_spec.rb  django_spec.rb  getting_started_spec.rb  hooks_spec.rb  nltk_spec.rb  package_manager_spec.rb  pip_spec.rb  pipenv_spec.rb  poetry_spec.rb  profile_d_scripts_spec.rb  python_spec.rb  python_update_warning_spec.rb  python_version_spec.rb  stack_spec.rb  uv_spec.rb
src/virtualenv-1.6.4/: PKG-INFO
test/: __main__.py  detect_test.sh  python_test.sh  run  run-deps  run-features  run-focus  run-versions  shunit2  utils
test/canary_django/: Makefile  deploy.sh  requirements.txt
test/distutils/: envoy.py  setup.py
test/django-1.3-skeleton/: requirements.txt
test/django-1.5-skeleton/: requirements.txt
test/django-1.6-skeleton/: requirements.txt
test/no-requirements/: setup.py
(+212 files in other folders)
