[project]
name = "poetry-basic"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = [
    "typing-extensions"
]

[tool.poetry]
package-mode = false

# This group shouldn't be installed due to us passing `--only main`.
# Note: We can't use `[dependency-groups]`, since Poetry doesn't yet support PEP735:
# https://github.com/python-poetry/poetry/issues/9751
[tool.poetry.group.test.dependencies]
pytest = "*"
