[tool.poetry]
package-mode = false

# This test uses the legacy `[tool.poetry]` table instead of `[project.dependencies]`
# to ensure that our chosen Poetry version still supports apps using the old table.
[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "*"

# This group shouldn't be installed due to us passing `--only main`.
[tool.poetry.group.test.dependencies]
pytest = "*"
