[project]
name = "uv-runtime-txt"
version = "0.0.0"
# The Python version here intentionally:
# - Doesn't match the version in runtime.txt
# - Matches the distro Python version in Ubuntu 24.04
# ...so we can test both the error message and that uv doesn't fall back to system Python.
requires-python = "==3.12.*"
dependencies = []
